fix: wrap key value label

--- a/frontend/src/periscope/components/KeyValueLabel/keyValueLabel.styles.scss
+++ b/frontend/src/periscope/components/KeyValueLabel/keyValueLabel.styles.scss
@@ -7,6 +7,7 @@
 	font-weight: 400;
 	line-height: 18px;
 	letter-spacing: -0.005em;
+	flex-wrap: wrap;
 
 	& > * {
 		padding: 2px 6px;
